feat(CQRS) correctly implements adapters for native CQRS implementation in Nestjs

--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -34,6 +34,7 @@
         "class-transformer": "catalog:",
         "reflect-metadata": "catalog:",
         "rxjs": "catalog:",
+        "uuid": "catalog:",
         "pg": "catalog:",
         "zod": "catalog:",
         "dotenv": "catalog:",
