--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,11 +3,12 @@ packages:
     - "packages/*"
 
 catalog:
-    "pg": 8.18.0
-    "zod": 4.3.6
-    "jose": 6.1.3
-    "dotenv": 17.2.4
-    "fastify": 5.7.4
+    "pg": ^8.18.0
+    "zod": ^4.3.6
+    "uuid": ^13.0.0
+    "jose": ^6.1.3
+    "dotenv": ^17.2.4
+    "fastify": ^5.7.4
     "globals": ^16.0.0
     "jest": ^30.0.0
     "prettier": ^3.4.2
@@ -31,13 +32,13 @@ catalog:
     "eslint": ~8.48.0
     "copy": ~0.3.2
     "concurrently": ~9.1.2
-    "sqlite3": 5.1.7
+    "sqlite3": ^5.1.7
 
 catalogs:
     types:
-        "@types/pg": 8.16.0
-        "@types/node": 25.2.3
-        "@types/mocha": 10.0.10
+        "@types/pg": ^8.16.0
+        "@types/node": ^25.2.3
+        "@types/mocha": ^10.0.10
         "@types/jest": ^30.0.0
         "@types/supertest": ^6.0.2
         "@types/express": ^5.0.6
